Add styles to the project

--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,47 @@
-.App {
-  text-align: center;
+.calculatorContainer {
+  width: 40em;
+  min-width: 300px;
+  margin-top: 4rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  display: grid;
+  place-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.display {
+  height: 100px;
+  padding-right: 5px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #848793;
+  color: #fff;
+  font-size: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.btn {
+  font-weight: bolder;
+  height: 100px;
+  background-color: #e0e1e1;
+  border: 1px solid rgb(208, 209, 208);
+  cursor: pointer;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.orange {
+  background-color: #f5903f;
+}
+
+.zero {
+  grid-area: 5 / 1 / 5 / 3;
+}
+
+.btn:active {
+  background-color: #c1c4c4;
 }
