Add styles to quotes page

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,11 @@ code {
     'Courier New',
     monospace;
 }
+
+body,
+main {
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  width: 100%;
+}
