--- a/src/styles/Calculator.module.css
+++ b/src/styles/Calculator.module.css
@@ -14,6 +14,8 @@
   max-width: 750px;
   min-width: 300px;
   margin-top: 4rem;
+  background-color: rgba(112, 63, 63, 0.527);
+  border-radius: 0.4rem;
 }
 
 .display {
@@ -26,11 +28,12 @@
   background-color: #848793;
   color: #fff;
   font-size: 3rem;
+  border-radius: 0.4rem;
 }
 
 .buttons {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);  
 }
 
 .btn,
@@ -42,6 +45,7 @@
   background-color: #e0e1e1;
   border: 1px solid rgb(208, 209, 208);
   cursor: pointer;
+  border-radius: 0.4rem;
 }
 
 .btnOrange {
