Change Fonts styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  background-color: black;
+  color: #fff;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -16,6 +21,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  width: 100%;
 }
 
 code {
@@ -28,7 +37,6 @@ code {
     monospace;
 }
 
-body,
 main {
   display: grid;
   place-items: center;
